--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,16 @@
 version: 2.1
+commands:
+  print_pipeline_id:
+    steps:
+      - run: echo ${CIRCLE_WORKFLOW_ID}
 
 jobs:
+  my_job:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - print_pipeline_id
+
   save_hello_world_output:
     docker:
       - image: circleci/node:13.8.0
@@ -22,6 +32,7 @@ jobs:
 workflows:
   my_workflow:
     jobs:
+      - my_job
       - save_hello_world_output
       - print_output_file:
           requires:
